# gymnasium-env-template

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yml  pyproject.toml  readme.md  tests.py
.github/workflows/: test.yml
template/: README.md.jinja  pyproject.toml.jinja
template/src/: __init__.py.jinja
template/src/envs/: __init__.py.jinja
template/src/wrappers/: __init__.py.jinja
template/{{environment_name}}/: __init__.py.jinja
template/{{environment_name}}/envs/: __init__.py.jinja  grid_world.py
template/{{environment_name}}/wrappers/: __init__.py.jinja
tests/: test_env.py  test_templating.py  utils.py
