[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template"]

[project]
name = "gymnasium-env-template"
version = "0.0.2"
dependencies = [
  "copier",
  "pyyaml",
  "gymnasium",
  "pytest",
  "toml",
  "pre-commit",
  "mypy",
]

[tool.ruff.pydocstyle]
convention = "numpy"
